2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Field::sql_find(): Do not quote the string.

	* glom/libglom/data_structure/field.cc: SqlBuilder already takes 
	care of quoting so this just changed the actual value.
	This makes Quick Find work again.

2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Find: Use backend-specific LIKE or ILIKE operator instead of =.

	* glom/libglom/connectionpool.[h|cc]:
	* glom/libglom/connectionpool_backends/backend.h:
	* glom/libglom/connectionpool_backends/postgres.h:
	* glom/libglom/connectionpool_backends/sqlite.h:
	get_string_find_operator(): Return the Gnome::Gda operator enum 
	instead of the operator as a string.
	* glom/libglom/data_structure/field.[h|cc]: sql_find_operator():
	Likewise, return the Gnome::Gda operator enum.
	* glom/libglom/utils.cc: get_find_where_clause_quick():
	* glom/mode_data/box_data.cc: get_find_where_clause():
	Use Field::sql_find_operator() and Field::sql_find(), as per 
	the TODO comments.

	This was code that I forgot to change properly when porting to 
	use Gnome::Gda::SqlBuilder, so this has been broken since 
	Glom 1.16.
	Find still does not work.

2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Frame: Rename a signal handler.

	* glom/frame_glom.[h|cc]: Rename on_menu_Mode_Toggle() to 
	on_menu_Edit_Find() because that is what it is now.
	* glom/application.cc: Adapted.

2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Main window: Moved the Records/Found widgets to the top-right.
	
	* ui/operator/window_main.glade: Remove the footer row of widgets.
	* glom/frame_glom.[h|cc]: Instead build them manually and add them (in a box) 
	to the notebook at the right-hand side next to the tabs.

2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Split the operator .glade files up into one file per top-level ID.

	* ui/operator/: Split the .glade files up, giving them the same names 
	as the top-level (or almost top-level) IDs that the code looks for.