@@ -1,3 +1,12 @@
+2011-07-04  Murray Cumming  <murrayc@murrayc.com>
+
+	Backends: Slight reorganization.
+
+	* glom/libglom/connectionpool_backends/backend.h:
+	* glom/libglom/connectionpool_backends/postgres.[h|cc]:
+	* glom/libglom/connectionpool_backends/sqlite.[h|cc]: Move method 
+  implementations into the .cc files.
+
 2011-06-23  Murray Cumming  <murrayc@murrayc.com>
 
 	Field::sql_find(): Do not quote the string.
